<resources>
    <string name="app_name">Sign_up</string>
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="please_select_your_role">please select your role</string>
    <string name="sing_up">Signing up</string>
    <string name="Username">Username</string>
    <string name="select_your_role">Select Your Role</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Log in</string>
    <string name="sign_up">sign up</string>
    <string name="goto_test_button">Goto Test</string>
    <string name="test_database_button">Test Database</string>
    <string name="log_in">Logging in</string>
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="all_courses">All Courses</string>
    <string name="sign_out">Sign out</string>

    <string-array name="roles">
        <item>Student</item>
        <item>Administrator</item>
    </string-array>

    <string name="title_home">Planner</string>
    <string name="app_intro">Easy organizer of your academic life</string>
    <string name="start_button">Let\'s Start!       →</string>

    <string name="test_view_courses">Goto courses page</string>
    <string name="courses_taken_page_next">Continue to plan →</string>
    <string name="courses_taken_page_add">Add ✊</string>
    <string name="course_taken_title">Taken Courses</string>
    <string name="view_courses_taken">← view courses taken</string>
    <string name="generate_planner">Generate Planner🎉</string>
    <string name="course_wanted">Course Wish List</string>
    <string name="log_out">Log Out 🏃‍</string>
    <string name="delete">Delete 🏳</string>
</resources>