<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".Home_Activity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:fontFamily="sans-serif"
        android:text="@string/title_home"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.248"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_intro"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/appName"
        app:layout_constraintTop_toBottomOf="@+id/appName" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif-black"
        android:text="@string/start_button"
        android:textAllCaps="false"
        android:textColor="@color/pink"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintStart_toStartOf="@+id/appIntro"
        app:layout_constraintTop_toBottomOf="@+id/appIntro" />


    <Button
        android:id="@+id/goto_test_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/goto_test_button"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@+id/start_button"
        app:layout_constraintTop_toBottomOf="@+id/start_button" />


</androidx.constraintlayout.widget.ConstraintLayout>