<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoursesTaken_Activity"
    android:background="#77B85F80">


    <TextView
        android:id="@+id/course_taken_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/course_taken_title"
        android:textColor="#FFF7FA"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="@+id/course_taken_view"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/course_taken_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="74dp"
        android:background="#FFF7FA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_taken_title" />

    <Button
        android:id="@+id/goto_courses_wanted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:fontFamily="sans-serif-black"
        android:text="@string/courses_taken_page_next"
        android:textColor="@color/pink"
        app:layout_constraintEnd_toEndOf="@+id/course_taken_view"
        app:layout_constraintTop_toBottomOf="@+id/course_taken_view" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:fontFamily="sans-serif-black"
        android:text="@string/courses_taken_page_add"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/pink"
        app:layout_constraintBottom_toTopOf="@+id/course_taken_view"
        app:layout_constraintEnd_toEndOf="@+id/course_taken_view" />

</androidx.constraintlayout.widget.ConstraintLayout>