<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoursesTaken_Activity"
    android:background="#77B85F80">


    <TextView
        android:id="@+id/all_course_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/all_courses"
        android:textColor="@color/off_white"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="@+id/all_course_list"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/all_course_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="74dp"
        android:background="@color/off_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/all_course_title" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:fontFamily="sans-serif-black"
        android:text="@string/courses_taken_page_add"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/pink"
        app:layout_constraintBottom_toTopOf="@+id/all_course_list"
        app:layout_constraintEnd_toEndOf="@+id/all_course_list" />

    <Button
        android:id="@+id/sign_out_adm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/off_white"
        android:text="@string/sign_out"
        android:textColor="@color/pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/all_course_list"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="668dp" />

</androidx.constraintlayout.widget.ConstraintLayout>